# FINAL_COVID_PROJECT

./: .gitignore  CMakeLists.txt  CovidProject  FINAL_COVID_PROJECT.code-workspace  addpatient.ui
Ben/Tabel_Project/: doctormenu.cpp  doctormenu.h  patientdetails.cpp  patientdetails.h  patientdetails.ui  patientfilltermodel.h  patientfiltermodel.cpp  patientlist.cpp  patientlist.h  patientlist.ui  patientmenu.cpp  patientmenu.h
data/: patient.csv  persons.csv
resources/: mainwindow.qrc
src/: add_patient.cpp  add_patient.h  addpatient.cpp  addpatient.h  covid_analyzer.h  covidanalyzer.cpp  covidanalyzer.h  covidtest.cpp  covidtest.h  csv_loader.cpp  csv_loader.h  csvloader.cpp  csvloader.h  data_types.h  doctor.cpp  doctor.h  doctor_menu.cpp  doctor_menu.h  doctormenu.cpp  doctormenu.h  error_handling.cpp  error_handling.h  login_screen.cpp  login_screen.h  loginscreen.cpp  loginscreen.h  main.cpp  mainwindow.cpp  mainwindow.h  moc_addpatient.cpp  moc_doctormenu.cpp  moc_loginscreen.cpp  moc_mainwindow.cpp  moc_patientlist.cpp  moc_patientmenu.cpp  model.cpp  paths.h  patient.cpp  patient.h  patient_details.cpp  (+31 more)
ui/: addpatient.ui  covidanalyzer.ui  covidtest.ui  doctormenu.ui  doctormenu.ui.autosave  doctormenuwor.ui  loginscreen.ui  mainwindow.ui  patientaccount.ui  patientdetails.ui  patientdetails.ui.autosave  patientlist.ui  patientlist.ui.autosave  patientmenu.ui
